# Psychogene

./: .gitignore  README.md  pyproject.toml
examples/: .gitignore  example_usage.py  researcher_workflow.py
legacy/Squared-test/: 25-generator-letter( flanker type1).py  25-generator-letter( flanker type2).py  25-generator-number( flanker type1).py  25-generator-number( flanker type2).py
